--- a/index.html
+++ b/index.html
@@ -612,7 +612,7 @@
           </div>
           <div class="package-footer">
             <div class="package-price">R$ 15,00</div>
-            <a href="https://wa.me/5511989399913?text=Ol%C3%A1%2C%20me%20interessei%20pelo%20pack%20Nifeta%21%21" 
+            <a href="https://www.linkpriv.com/1ff2ef20-e06d-4969-a48f-9683011f2b83" 
                class="package-button" 
                target="_blank"
                rel="noopener noreferrer"
@@ -644,7 +644,7 @@
           </div>
           <div class="package-footer">
             <div class="package-price">R$ 24,99</div>
-            <a href="https://wa.me/5511989399913?text=Ol%C3%A1%2C%20me%20interessei%20pelo%20pack%20Safada%21%21" 
+            <a href="https://www.linkpriv.com/3007fce7-f801-4c4c-8d6a-dac332509863" 
                class="package-button" 
                target="_blank"
                rel="noopener noreferrer"
@@ -676,7 +676,7 @@
           </div>
           <div class="package-footer">
             <div class="package-price">R$ 60,00</div>
-            <a href="https://wa.me/5511989399913?text=Ol%C3%A1%2C%20me%20interessei%20pelo%20pack%20Premium%21%21" 
+            <a href="https://www.linkpriv.com/5ca7348f-c525-4319-8cf0-128ce6809e8a" 
                class="package-button" 
                target="_blank"
                rel="noopener noreferrer"
